tests/testdata/run/node_env_var_allowlist.ts.out
ok
[WILDCARD]error: Uncaught (in promise) NotCapable: Requires env access to "NOT_NODE_DEBUG", run again with the --allow-env flag
Deno.env.get("NOT_NODE_DEBUG");
         ^
    at [WILDCARD]
